--- a/web_flask/templates/6-number_odd_or_even.html
+++ b/web_flask/templates/6-number_odd_or_even.html
@@ -1,9 +1,14 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <title>HBNB</title>
-</head>
-<body>
-    <h1>Number: {{ n }} {% if n % 2 == 0 %} is even {% else %} is odd {% endif %}</h>
-</body>
-</html>
+<HTML lang="en">
+    <HEAD>
+        <TITLE>HBNB</TITLE>
+    </HEAD>
+    <BODY>
+    {% if n is even %}
+        <H1>Number: {{ n }} is even</H1>
+    {% else %}
+        <H1>Number: {{ n }} is odd</H1>
+    {% endif %}
+    </BODY>
+</HTML>
+
